code base for messaging

--- a/discord-client/src/main/resources/application-local.yml
+++ b/discord-client/src/main/resources/application-local.yml
@@ -3,4 +3,4 @@ org:
     client:
       discord:
         bot:
-          token:
+          token: MTE3OTQxMDc4NDc0MTI0NDk0OA.GXdWcx.isWK4g-h2FIp_k7q6SCKn0LS734cVBrmzEWNnU
