--- a/messaging/pom.xml
+++ b/messaging/pom.xml
@@ -10,26 +10,17 @@
 		<relativePath/>
 	</parent>
 
-	<artifactId>discord-client</artifactId>
+	<artifactId>messaging</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>discord-client</name>
-	<description>Innotice Discord Client</description>
+	<name>messaging</name>
+	<description>Innotice Messaging</description>
 	<packaging>jar</packaging>
 
-	<properties>
-		<discord4j.version>3.3.0-RC1</discord4j.version>
-	</properties>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>
 
 		<dependency>
-			<groupId>com.discord4j</groupId>
-			<artifactId>discord4j-core</artifactId>
-			<version>${discord4j.version}</version>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
 		<dependency>
@@ -40,20 +31,8 @@
 
 		<dependency>
 			<groupId>org.innotice</groupId>
-			<artifactId>messaging</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.innotice</groupId>
 			<artifactId>model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
