--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,15 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<projectreactor.version>3.6.0</projectreactor.version>
+		<jackson.version>2.16.0</jackson.version>
 	</properties>
 
 	<modules>
 		<module>discord-client</module>
+		<module>kafka-config</module>
+		<module>messaging</module>
+		<module>model</module>
 	</modules>
 
 	<dependencies>
@@ -34,6 +39,36 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>${projectreactor.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
