--- a/discord-client/src/main/resources/application-local.yml
+++ b/discord-client/src/main/resources/application-local.yml
@@ -4,3 +4,15 @@ org:
       discord:
         bot:
           token: MTE3OTQxMDc4NDc0MTI0NDk0OA.GXdWcx.isWK4g-h2FIp_k7q6SCKn0LS734cVBrmzEWNnU
+spring:
+  application:
+    name: discord-client
+server:
+  port: 8080
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    preferIpAddress: true
