--- a/discord-server-resource-server/src/main/resources/application-dev.yml
+++ b/discord-server-resource-server/src/main/resources/application-dev.yml
@@ -15,7 +15,7 @@ spring:
 org:
   innotice:
     security:
-      secretHeader: ${INNOTICE_SECRET_HEADER}
+      internalSecret: ${INNOTICE_SECRET_HEADER}
 
 eureka:
   instance:
