--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,7 @@ services:
       - "8080:8080"
     environment:
       - ORG_INNOTICE_KAFKA_BOOTSTRAP-SERVERS=kafka:9092
-      - ORG_INNOTICE_SECURITY_MICROSERVICE_SECURED=false
-      - ORG_INNOTICE_SECURITY_SECRETHEADER=${INNOTICE_SECRET_HEADER}
+      - ORG_INNOTICE_SECURITY_INTERNALSECRET=${INNOTICE_SECRET_HEADER}
       - ORG_INNOTICE_CLIENT_DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=${EUREKA_URL}
     depends_on:
@@ -107,10 +106,10 @@ services:
       - SPRING_R2DBC_URL=r2dbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
       - SPRING_R2DBC_USERNAME=${DB_USER}
       - SPRING_R2DBC_PASSWORD=${DB_PASSWORD}
-      - ORG_INNOTICE_SECURITY_MICROSERVICE_SECURED=false
-      - ORG_INNOTICE_SECURITY_SECRETHEADER=${INNOTICE_SECRET_HEADER}
+      - ORG_INNOTICE_SECURITY_INTERNALSECRET=${INNOTICE_SECRET_HEADER}
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=${EUREKA_URL}
       - ORG_INNOTICE_KAFKA_BOOTSTRAP-SERVERS=kafka:9092
+      - ORG_INNOTICE_DISCORD_CLIENT_SECRET=${DISCORD_CLIENT_SECRET}
     depends_on:
       - innotice-db
     healthcheck:
@@ -133,8 +132,7 @@ services:
       - ORG_INNOTICE_KAFKA_BOOTSTRAP-SERVERS=kafka:9092
       - ORG_INNOTICE_TWITCH_AUTH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - ORG_INNOTICE_TWITCH_AUTH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
-      - ORG_INNOTICE_SECURITY_MICROSERVICE_SECURED=false
-      - ORG_INNOTICE_SECURITY_SECRETHEADER=${INNOTICE_SECRET_HEADER}
+      - ORG_INNOTICE_SECURITY_INTERNALSECRET=${INNOTICE_SECRET_HEADER}
     links:
       - discord-server-resource-server
       - discovery-server
