--- a/twitch-service/src/main/resources/application-dev.yml
+++ b/twitch-service/src/main/resources/application-dev.yml
@@ -15,7 +15,7 @@ eureka:
 org:
   innotice:
     security:
-      secretHeader: ${INNOTICE_SECRET_HEADER}
+      internalSecret: ${INNOTICE_SECRET_HEADER}
     twitch:
       auth:
         client:
